--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@
     background-color: #FFF; }
 
   a {
-    color: #57A;
+    color: #d4600d;
     font-weight: bold;
     text-decoration: none; }
 
